# PJN_Multimodal_Models

./: README.md  pyproject.toml  upload_dataset.py
notebooks/: SmolVLM_BASE_finetuningg.ipynb  moondream_2.ipynb  qwen_2b.ipynb
