[tool.poetry]
name = "pjn-multimodal-models"
version = "0.1.0"
description = ""
authors = ["szymonsztreja <s26048@pjwstk.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wandb = "^0.19.4"
torch = "^2.5.1"
transformers = "^4.48.1"
timm = "^1.0.14"
einops = "^0.8.0"
datasets = "^3.2.0"
bitsandbytes = "^0.45.1"
accelerate = "^1.3.0"
ipython = "^8.31.0"
qwen-vl-utils = "^0.0.10"
trl = "^0.13.0"
peft = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
